--- a/vectors_en.html
+++ b/vectors_en.html
@@ -124,7 +124,10 @@
                     In Figure 1.4(a), the positive z-axis is shown above the plane containing the x- and y-axes. The system displayed follows the right-hand rule. If we take our right hand and align the fingers with the positive x-axis, then curl the fingers so they point in the direction of the positive y-axis, our thumb points in the direction of the positive z-axis. In this website, we always work with coordinate systems set up in accordance with the right-hand rule. Some systems do follow a left-hand rule, but the right-hand rule is considered the standard representation.
                 </p>
                 <figure class="centered">
-                    <img src="images\3DCoordSystAndRightHandRule.svg" width="600" height="300" />
+                    <img src="images\3DCoordSystAndRightHandRule.svg" 
+                        width="600" 
+                        height="300" 
+                        alt=""/>
                     <figcaption><b>Figure 1.4</b> (a) Three-dimensional rectangular coordinate system with the x-axis, the y-axis and the z-axis. (b) The right-hand rule is used to determine the placement of the coordinate axes in the standard Cartesian Plane.</figcaption>
                 </figure>
                 <p>
@@ -522,29 +525,37 @@
             <aside><h3>References</h3>
                 <ul>
                     <li>
-                        <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" target="_blank">
+                        <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" 
+                            target="_blank"
+                            rel="noopener noreferrer">
                             8.8 Vectors. Precalculus. Openstax.
                         </a>
                     </li>
                     <li>
-                        <a href="http://encyclopediaofmath.org/index.php?title=Vector&oldid=49131" target="_blank">
+                        <a href="http://encyclopediaofmath.org/index.php?title=Vector&oldid=49131" 
+                            target="_blank"
+                            rel="noopener noreferrer">
                             Vector. Encyclopedia of Mathematics.
                         </a>
                     </li>
                     <li>
-                        <a href="http://encyclopediaofmath.org/index.php?title=Vector_algebra&oldid=49132" target="_blank">
+                        <a href="http://encyclopediaofmath.org/index.php?title=Vector_algebra&oldid=49132"         
+                            target="_blank"
+                            rel="noopener noreferrer">
                             Vector algebra. Encyclopedia of Mathematics.
                         </a>
                     </li>
                     <li>
                         <a href="https://encyclopediaofmath.org/wiki/Cartesian_orthogonal_coordinate_system"
-                            target="_blank">
+                            target="_blank"
+                            rel="noopener noreferrer">
                             Cartesian orthogonal coordinate system. Encyclopedia of Mathematics.
                         </a>
                     </li>
                     <li>
                         <a href="https://openstax.org/books/physics/pages/5-1-vector-addition-and-subtraction-graphical-methods"
-                            target="_blank">
+                            target="_blank"
+                            rel="noopener noreferrer">
                             5.1 Vector Addition and Subtraction: Graphical Methods. Physics High School. Openstax.
                         </a>
                     </li>
@@ -606,27 +617,37 @@
                     <h4  >References</h4>
                     <ul>
                         <li>
-                            <a href="https://www.mathsisfun.com/definitions/coordinate-plane.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/definitions/coordinate-plane.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [1] Coordinate Plane.
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.mathsisfun.com/algebra/vectors.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/algebra/vectors.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [2] Vectors.
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.mathsisfun.com/measure/speed-velocity.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/measure/speed-velocity.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [3] Speed and Velocity.
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.mathsisfun.com/algebra/trig-four-quadrants.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/algebra/trig-four-quadrants.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [4] Sine, Cosine and Tangent in Four Quadrants.
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.mathsisfun.com/algebra/vectors-dot-product.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/algebra/vectors-dot-product.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [5] Dot Product.
                             </a>
                         </li>
@@ -648,7 +669,8 @@
                     <ul>
                         <li>
                             <a href="https://openstax.org/books/physics/pages/5-1-vector-addition-and-subtraction-graphical-methods"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 5.1 Vector Addition and Subtraction: Graphical Methods. Physics High School. Openstax.
                             </a>
                         </li>
@@ -679,7 +701,8 @@
                         <li> 
                             <a class="lang lang-en" 
                                 href="https://en.wikipedia.org/wiki/Compass_rose"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 Compass rose.
                             </a>
                         </li>
@@ -704,20 +727,24 @@
                 <aside><h4>References</h4>
                     <ul>
                         <li>
-                            <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" target="_blank">
+                            <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [1] Precalculus. 8.8 Vectors. Vector Components in Terms of Mangitude and Direction.
                             </a>
                         </li>
                         <li>
                             <a href="https://openstax.org/books/algebra-and-trigonometry/pages/7-2-right-triangle-trigonometry"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [2] Algebra and Trigonometry. 7.2 Right Triangle Trigonometry.Finding Trigonometric
                                 Functions of Special Angles Using Side Lengths
                             </a>
                         </li>
                         <li>
                             <a href="https://openstax.org/books/algebra-and-trigonometry/pages/7-4-the-other-trigonometric-functions"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [3] Algebra and Trigonometry. 7.4 The Other Trigonometric Functions. Table 1
                             </a>
                         </li>
@@ -748,13 +775,15 @@
                     <ul>
                         <li>
                             <a href="https://openstax.org/books/university-physics-volume-1/pages/2-2-coordinate-systems-and-components-of-a-vector"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [1] Coordinate Systems and Components of a Vector.
                             </a>
                         </li>
                         <li>
                             <a href="https://openstax.org/books/university-physics-volume-1/pages/2-4-products-of-vectors"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [2] University Physics Volume 1. 2.4 Products of Vectors.
                             </a>
                         </li>
@@ -783,7 +812,9 @@
                 <aside><h4>References</h3>
                     <ul>
                         <li>
-                            <a href="https://openstax.org/books/calculus-volume-3/pages/2-3-the-dot-product" target="_blank">
+                            <a href="https://openstax.org/books/calculus-volume-3/pages/2-3-the-dot-product" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [1] Calculus Volume 3. 2.3 The Dot Product. Projections.
                             </a>
                         </li>
