--- a/vectors_es.html
+++ b/vectors_es.html
@@ -129,7 +129,10 @@
                     En la Figura 1.4 (a), el eje z positivo se muestra sobre el plano que contiene los ejes x e y. El sistema que se muestra sigue la regla de la mano derecha. Si tomamos nuestra mano derecha y alineamos los dedos con el eje x positivo, luego dobla los dedos para que apunten en la dirección del eje y positivo, nuestro pulgar apunta en la dirección del eje z positivo. En este sitio web, siempre trabajamos con sistemas de coordenadas configurados de acuerdo con la regla de la mano derecha. Algunos sistemas siguen una regla de la mano izquierda, pero la regla de la mano derecha se considera la representación estándar.
                 </p>
                 <figure class="centered">
-                    <img src="images\3DCoordSystAndRightHandRule.svg" width="600" height="300" />
+                    <img src="images\3DCoordSystAndRightHandRule.svg" 
+                        width="600" 
+                        height="300" 
+                        alt=""/>
                     <figcaption><b>Figura 1.4</b> (a) Sistema de coordenadas rectangulares tridimensionales con el eje x, el eje y y el eje z. (b) La regla de la mano derecha se utiliza para determinar la ubicación de los ejes de coordenadas en la norma Plano Cartesiano.</figcaption>
                 </figure>
                 <p>
@@ -522,29 +525,37 @@
             <aside><h3>Referencias</h3>
                 <ul>
                     <li>
-                        <a href="https://openstax.org/books/prec%C3%A1lculo-2ed/pages/8-8-vectores" target="_blank">
+                        <a href="https://openstax.org/books/prec%C3%A1lculo-2ed/pages/8-8-vectores" 
+                            target="_blank"
+                            rel="noopener noreferrer">
                             8.8 Vectores. Precalculus. Openstax.
                         </a>
                     </li>
                     <li>
-                        <a href="http://encyclopediaofmath.org/index.php?title=Vector&oldid=49131" target="_blank">
+                        <a href="http://encyclopediaofmath.org/index.php?title=Vector&oldid=49131" 
+                            target="_blank"
+                            rel="noopener noreferrer">
                             Vector. Encyclopedia of Mathematics.
                         </a>
                     </li>
                     <li>
-                        <a href="http://encyclopediaofmath.org/index.php?title=Vector_algebra&oldid=49132" target="_blank">
+                        <a href="http://encyclopediaofmath.org/index.php?title=Vector_algebra&oldid=49132" 
+                            target="_blank"
+                            rel="noopener noreferrer">
                             Vector algebra. Encyclopedia of Mathematics.
                         </a>
                     </li>
                     <li>
                         <a href="https://encyclopediaofmath.org/wiki/Cartesian_orthogonal_coordinate_system"
-                            target="_blank">
+                            target="_blank"
+                            rel="noopener noreferrer">
                             Cartesian orthogonal coordinate system. Encyclopedia of Mathematics.
                         </a>
                     </li>
                     <li>
                         <a href="https://openstax.org/books/physics/pages/5-1-vector-addition-and-subtraction-graphical-methods"
-                            target="_blank">
+                            target="_blank"
+                            rel="noopener noreferrer">
                             5.1 Vector Addition and Subtraction: Graphical Methods. Physics High School. Openstax.
                         </a>
                     </li>
@@ -606,27 +617,37 @@
                     <h4>Referencias</h4>
                     <ul>
                         <li>
-                            <a href="https://www.mathsisfun.com/definitions/coordinate-plane.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/definitions/coordinate-plane.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [1] Coordinate Plane.
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.mathsisfun.com/algebra/vectors.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/algebra/vectors.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [2] Vectors.
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.mathsisfun.com/measure/speed-velocity.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/measure/speed-velocity.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [3] Speed and Velocity.
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.mathsisfun.com/algebra/trig-four-quadrants.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/algebra/trig-four-quadrants.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [4] Sine, Cosine and Tangent in Four Quadrants.
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.mathsisfun.com/algebra/vectors-dot-product.html" target="_blank">
+                            <a href="https://www.mathsisfun.com/algebra/vectors-dot-product.html" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [5] Dot Product.
                             </a>
                         </li>
@@ -648,7 +669,8 @@
                     <ul>
                         <li>
                             <a href="https://openstax.org/books/physics/pages/5-1-vector-addition-and-subtraction-graphical-methods"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 5.1 Vector Addition and Subtraction: Graphical Methods. Physics High School. Openstax.
                             </a>
                         </li>
@@ -679,7 +701,8 @@
                         <li>
                             <a class="lang lang-es" lang="es" 
                                 href="https://es.wikipedia.org/wiki/Rosa_de_los_vientos"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 Rosa de los vientos.
                             </a>
                         </li>
@@ -704,20 +727,24 @@
                 <aside><h4>Referencias</h4>
                     <ul>
                         <li>
-                            <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" target="_blank">
+                            <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [1] Precalculus. 8.8 Vectors. Vector Components in Terms of Mangitude and Direction.
                             </a>
                         </li>
                         <li>
                             <a href="https://openstax.org/books/algebra-and-trigonometry/pages/7-2-right-triangle-trigonometry"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [2] Algebra and Trigonometry. 7.2 Right Triangle Trigonometry.Finding Trigonometric
                                 Functions of Special Angles Using Side Lengths
                             </a>
                         </li>
                         <li>
                             <a href="https://openstax.org/books/algebra-and-trigonometry/pages/7-4-the-other-trigonometric-functions"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [3] Algebra and Trigonometry. 7.4 The Other Trigonometric Functions. Table 1
                             </a>
                         </li>
@@ -749,13 +776,15 @@
                     <ul>
                         <li>
                             <a href="https://openstax.org/books/university-physics-volume-1/pages/2-2-coordinate-systems-and-components-of-a-vector"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [1] Coordinate Systems and Components of a Vector.
                             </a>
                         </li>
                         <li>
                             <a href="https://openstax.org/books/university-physics-volume-1/pages/2-4-products-of-vectors"
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [2] University Physics Volume 1. 2.4 Products of Vectors.
                             </a>
                         </li>
@@ -784,7 +813,9 @@
                 <aside><h4>Referencias</h3>
                     <ul>
                         <li>
-                            <a href="https://openstax.org/books/calculus-volume-3/pages/2-3-the-dot-product" target="_blank">
+                            <a href="https://openstax.org/books/calculus-volume-3/pages/2-3-the-dot-product" 
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 [1] Calculus Volume 3. 2.3 The Dot Product. Projections.
                             </a>
                         </li>
@@ -833,11 +864,13 @@
                     <ul>
                         <li>
                             <a href="https://es.wikipedia.org/wiki/Tri%C3%A1ngulo" 
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 Triángulo.
                             </a>
                             <a href="https://en.wikipedia.org/wiki/Triangle" 
-                                target="_blank">
+                                target="_blank"
+                                rel="noopener noreferrer">
                                 Triangle.
                             </a>
                         </li>
