--- a/geometry_es.html
+++ b/geometry_es.html
@@ -15,12 +15,10 @@
 
     <!-- load Mathjax library-->
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es5,es6,es7|default"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 
     <!-- loads page script files-->
-    <script src="scripts/SelectLanguage.js" defer></script>
+    <!--<script src="scripts/SelectLanguage.js" defer></script>-->
 </head>
 
 <body>
