--- a/geometry_en.html
+++ b/geometry_en.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
     <!-- loads page script files-->
-    <script src="scripts/SelectLanguage.js" defer></script>
+    <!--<script src="scripts/SelectLanguage.js" defer></script>-->
 </head>
 
 <body>
