--- a/vectors_es.html
+++ b/vectors_es.html
@@ -69,17 +69,15 @@
                 <p>
                     El cálculo vectorial, que es el estudio de las operaciones realizadas sobre vectores, se basa en vectores libres, ya que dos vectores libres dados son equivalente a un vector deslizante dado o a un vector ligado dado, siempre y cuando tengamos en cuenta el valor físico y el significado del vector analizado. A partir de ahora, <strong>hablaremos de vectores libres si no se menciona lo contrario</strong>.
                 </p>
-                <p style="margin-bottom: 7px;">
-                    Un vector está caracterizado:
-                    <ul>
-                        <li>
-                            por su <strong>magnitud (o módulo)</strong>, que es igual a la longitud del segmento \(\overline{AB}\) y se denota por \(\Vert\vec v\Vert\),
-                        </li>
-                        <li>
-                            y por su <strong>dirección</strong>: de A hacia B.
-                        </li>
-                    </ul>
-                </p>
+                <p class="intro-paragraph">Un vector está caracterizado:</p>
+                <ul>
+                    <li>
+                        por su <strong>magnitud (o módulo)</strong>, que es igual a la longitud del segmento \(\overline{AB}\) y se denota por \(\Vert\vec v\Vert\),
+                    </li>
+                    <li>
+                        y por su <strong>dirección</strong>: de A hacia B.
+                    </li>
+                </ul>  
             </section>
             <section><h3>1.3 Suma de Vectores, Método Gráfico:</h3>    
                 <p>
@@ -183,7 +181,7 @@
                     Haz click en el botón para abrir la aplicación qeu calcula magnitud y dirección de un vector dadas sus componentes. 
                     <br><button id="openFormButton">Calcula magnitud y dirección de un vector</button>
                 </p>
-                <form id="coordToMagDir" style="display: none">
+                <form id="coordToMagDir">
                     <h2>Calcula magnitud y dirección de un vector dadas sus coordenadas.</h2>
                     <label>Coordenada X del vector:
                         <input id="xCoordinate" type="number" name="xCoordEng" value="0" step="0.1">
@@ -199,7 +197,7 @@
                     º<br>
                     </label>                    
                     <button type='button' id="closeFormButton">Cierra</button><br>
-                    <canvas id="myCanvasEng" width="400" height="400" style="border:1px solid grey"></canvas>
+                    <canvas id="myCanvasEng" width="400" height="400" class="canvas-border"></canvas>
                 </form>
             </section>
             <section><h3>1.7 Suma de vectores y multiplicación por un escalar usando sus componentes</h3>
@@ -556,8 +554,8 @@
         <br>
         <article><!-- 2. EJERCIOS CON VECTORES-->
             <div class="header-container">
-                <h2 id="Ejercicios con vectores" style="margin-right: 10px;">2. EJERCIOS CON VECTORES</h2>
-                <a href="#Arriba">Back to the top.</a>
+                <h2 id="Ejercicios con vectores">2. EJERCIOS CON VECTORES</h2>
+                <a href="#Arriba" class="center">Regreso al Inicio.</a>
             </div>
             <section><h3>Ejercicio 1</h3>
                 <p>
@@ -594,10 +592,10 @@
                     &emsp; $$\phi = \arccos\frac{\Vert\vec v_p\Vert\cdot\Vert\vec v_r\Vert}{\vec v_p\cdot\vec v_r}$$
                 </p>
                 <p>
-                    &emsp; &phi; = <span style="display: inline;" id="2_1phi1"></span>º
+                    &emsp; &phi; = <span id="2_1phi1"></span>º
                 </p>
                 <p>
-                    Entonces, la respuesta al ejercicio es que la embarcación debe ser impulsada a una velocidad de <span id="2_1normvPropelled1"></span> Km/h y en una dirección que forme <span style="display: inline;" id="2_1phi2"></span>º con el río.
+                    Entonces, la respuesta al ejercicio es que la embarcación debe ser impulsada a una velocidad de <span id="2_1normvPropelled1"></span> Km/h y en una dirección que forme <span id="2_1phi2"></span>º con el río.
                 </p>
                 <figure class="centered">
                     <svg id="svg2_1"></svg>
@@ -824,8 +822,7 @@
                     &emsp;$$\vec v = \vec w \times \vec r = \begin{vmatrix}\vec i & \vec j & \vec k \\ 1 & 1 & 1 \\ 2 & -2 & 1\\ \end{vmatrix} = \begin{vmatrix} 1 & 1 \\ -2 & 1 \\ \end{vmatrix} \vec i - \begin{vmatrix} 1 & 1 \\ 2 & 1\\ \end{vmatrix} \vec j + \begin{vmatrix} 1 & 1 \\ 2 & -2 \\ \end{vmatrix}\vec k = (1+2)\vec i -(1-2)\vec j + (-2-2)\vec k = 3\vec i + \vec j -4\vec k$$
                 </p>
                 <p>Que se puede escribir de una manera más simple como sigue:</p>
-                <p> \(\vec v = \vec w \times \vec r =\) <span id="2_7_1" style="display: inline-block;"></span> = <span id="2_7_2"></span></p>
-                <!--<p> \(\vec v = \vec w \times \vec r =\) <span id="2_7_3" style="display: inline-block;"></span> = <span id="2_7_4"></span></p>-->
+                <p> \(\vec v = \vec w \times \vec r =\) <span id="2_7_1" class ="math-inline-block"></span> = <span id="2_7_2"></span></p>
             </section>
             <section><h3>Ejercicio 8</h3>
                 <p>
