--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -400,11 +400,14 @@
                     <figcaption><b>Figura 1.8 </b>Gráfica de \(x = f(t)\) para un movimiento rectilíneo uniformemente acelerado.</figcaption>
                 </figure>
 				<p>A diferencia del MRU donde la velocidad es constante, en el MRUA la velocidad varía continuamente. Para comprender la velocidad en un instante específico, recurrimos al concepto de velocidad instantánea. Similar a cómo la tangente en el MRU representa la velocidad constante, en el MRUA, donde la gráfica de posición vs. tiempo ($x$ vs. $t$) es una curva (una parábola), <strong>la velocidad instantánea en cada punto de la curva corresponde a la pendiente de la recta tangente a la curva en ese instante</strong>. Esta pendiente instantánea es, por definición, la derivada de la posición respecto al tiempo:</p>
-<div class="container">
-    <div class="center">$$ \text{tg } \alpha = \frac{dx}{dt} = v_{\text{instantánea}} $$</div>
-    <div class="right" id="[1.34]">[1.34]</div>
-</div>
+				<div class="container">
+				    <div class="center">$$ \text{tg } \alpha = \frac{dx}{dt} = v_{\text{instantánea}} $$</div>
+				    <div class="right" id="[1.34]">[1.34]</div>
+				</div>
             </section>
+			<section><h3>1.7 Movimiento Circular Uniforme</h3>
+				<p>Una partícula tiene <strong>movimiento circular uniforme</strong> cuando cuando no tiene aceleración tangencial y su aceleración normal es constante.</p>
+			</section>
         </article>
     </body>
 </html>
