--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -405,14 +405,58 @@
 				    <div class="right" id="[1.34]">[1.34]</div>
 				</div>
             </section>
-			<section><h3>1.7 Movimiento Circular Uniforme</h3>
-				<p>Una partícula tiene <strong>movimiento circular uniforme</strong> cuando cuando no tiene aceleración tangencial y su aceleración normal es constante.</p>
-				<p>Al tener una aceleración tangencial nula, su velocidad será constante y el camino recorrido será \(s = vt\).</p>
-				<p>Sin embargo, en los movimientos circulares, en lugar del camino recorrido, se utiliza más el ángulo correspondiente al arco recorrido.</p>
-				<p>Partiendo de la definición de radián, tenemos que \(s = \theta R\). Y si derivamos respecto al tiempo:</p>
-				\[ \frac{ds}{dt} = \frac{\theta}{t}R = \omega R \]
-				<p>La expresión \(d\theta/dt\) recibe el nombre de <strong>velocidad angular</strong>, y se representa por \(\omega\).</p>
-			</section>
+			<section><h3>Movimiento Circular Uniforme (MCU)</h3>
+                <p>El Movimiento Circular Uniforme (MCU) describe el movimiento de un objeto que se desplaza en una trayectoria circular a una <b>rapidez constante</b>. Para entender cómo llegamos a la ecuación que define su posición en cualquier momento, partimos de las características clave de su aceleración.</p>
+                <h4>Las Aceleraciones en el MCU</h4>
+                <p>Como ya sabemos, la aceleración de un objeto en movimiento puede descomponerse en dos componentes intrínsecas: la aceleración tangencial (\(a_t\)) y la aceleración normal (o centrípeta, \(a_n\)).</p>
+                <ul>
+                    <li><b>Aceleración Tangencial (\(a_t\)):</b> Esta componente de la aceleración actúa en la dirección del movimiento (tangente a la trayectoria) y es la responsable de cambiar la <b>magnitud de la velocidad</b> (la rapidez) del objeto. En el MCU, la rapidez es, por definición, constante. Por lo tanto, no hay cambio en la magnitud de la velocidad, lo que significa que la <b>aceleración tangencial es nula (\(a_t = 0\))</b>.</li>
+                    <li><b>Aceleración Normal o Centrípeta (\(a_n\)):</b> Esta componente actúa perpendicular a la velocidad y siempre apunta hacia el centro de la curvatura de la trayectoria. Es la responsable de cambiar la <b>dirección de la velocidad</b>. Para que un objeto se mueva en un círculo, la dirección de su velocidad debe cambiar continuamente. En el MCU, la trayectoria es una circunferencia de radio \(R\), y la magnitud de la aceleración normal se mantiene constante, dada por la fórmula:
+                    \[ a_n = \frac{v^2}{R} \]
+                    Dado que la rapidez (\(v\)) y el radio (\(R\)) son constantes en el MCU, la magnitud de la aceleración normal (\(a_n\)) también lo es.</li>
+                </ul>
+                <h4>La Posición del Móvil: Introducción a las Coordenadas Polares y el Radián</h4>
+                <p>Para describir la posición de un móvil en una trayectoria circular, el sistema de <b>coordenadas polares</b> \((r, \theta)\) es el más natural y conveniente.</p>
+                <ul>
+                    <li><b>El Radio (\(r\)):</b> Para una trayectoria circular con su centro en el origen, el radio \(r\) es simplemente el radio constante de la circunferencia, que denotamos como \(R\). Así, la primera coordenada polar es \(r=R\).</li>
+                    <li><b>El Ángulo (\(\theta\)):</b> La segunda coordenada polar es el ángulo \(\theta\), que representa la posición angular del móvil respecto a un eje de referencia (usualmente el eje \(x\) positivo). Este ángulo se mide en <b>radianes</b>.
+                        <p><b>Definición de Radián:</b> Un radián es la unidad de medida de un ángulo que subtiende un arco de longitud igual al radio de un círculo. Si el arco de una circunferencia mide \(s\) y el radio de la circunferencia es \(R\), entonces el ángulo \(\theta\) (en radianes) subtendido por ese arco es:</p>
+                        \[ \theta = \frac{s}{R} \]
+                        <p>De esta definición, podemos deducir una relación fundamental: la longitud de un arco (\(s\)) en una circunferencia es igual al radio (\(R\)) multiplicado por el ángulo (\(\theta\)) que subtiende ese arco (medido en radianes). Para un cambio infinitesimal en la posición angular \(d\theta\), la longitud del arco infinitesimal \(ds\) es:</p>
+                        \[ ds = R d\theta \]
+                        <p>Esta relación conecta la distancia recorrida a lo largo de la trayectoria (una cantidad lineal) con el cambio en la posición angular (una cantidad angular).</p>
+                    </li>
+                </ul>
+                <h4>La Velocidad Angular (\(\omega\)) como Constante Fundamental</h4>
+                <p>A partir de la aceleración tangencial nula (\(a_t=0\)), confirmamos que la <b>rapidez lineal (\(v = ds/dt\)) es constante</b>. Utilizando la relación \(ds = R d\theta\), podemos expresar la rapidez lineal como:</p>
+                \[ v = \frac{ds}{dt} = \frac{R d\theta}{dt} = R \frac{d\theta}{dt} \]
+                <p>La cantidad \(\frac{d\theta}{dt}\) es la <b>velocidad angular (\(\omega\))</b>, que representa la rapidez con la que el ángulo \(\theta\) cambia con el tiempo. Por lo tanto, tenemos:</p>
+                \[ v = \omega R \]
+                <p>Dado que \(v\) es constante y \(R\) (el radio de la circunferencia) también lo es, se deduce que la <b>velocidad angular (\(\omega\)) también debe ser constante</b> para el MCU. Esta constante \(\omega\) (medida en radianes por segundo) es la piedra angular para describir la posición en el tiempo.</p>
+                <h4>Ecuación de Movimiento para la Posición Angular e Integración</h4>
+                <p>La definición de velocidad angular como la tasa de cambio de la posición angular nos da la siguiente ecuación diferencial:</p>
+                \[ \omega = \frac{d\theta}{dt} \]
+                <p>Dado que \(\omega\) es constante en el MCU, podemos resolver esta sencilla ecuación diferencial mediante integración. Multiplicamos por \(dt\) para separar las variables:</p>
+                \[ d\theta = \omega dt \]
+                <p>Ahora, integramos ambos lados. Si en el instante inicial \(t=0\) la posición angular es \(\theta_0\), y en un instante \(t\) la posición angular es \(\theta(t)\):</p>
+                \[ \int_{\theta_0}^{\theta(t)} d\theta = \int_{0}^{t} \omega dt \]
+                \[ [\theta]_{\theta_0}^{\theta(t)} = \omega [t]_{0}^{t} \]
+                \[ \theta(t) - \theta_0 = \omega (t - 0) \]
+                \[ \theta(t) = \omega t + \theta_0 \]
+                <p>Esta ecuación nos da la <b>posición angular</b> del móvil en cualquier instante de tiempo \(t\). Así, la posición del móvil en coordenadas polares en cualquier instante \(t\) es \((R, \omega t + \theta_0)\).</p>
+                <h4>Transformación a Coordenadas Cartesianas: El Vector de Posición</h4>
+                <p>Finalmente, para expresar la posición del móvil en un sistema de <b>coordenadas cartesianas</b> \((x, y)\), utilizamos las relaciones trigonométricas que conectan las coordenadas polares con las cartesianas:</p>
+                \[ x = r \cos(\theta) \]
+                \[ y = r \sin(\theta) \]
+                <p>Sustituyendo \(r=R\) y la expresión de \(\theta(t)\) que acabamos de derivar:</p>
+                \[ x(t) = R \cos(\omega t + \theta_0) \]
+                \[ y(t) = R \sin(\omega t + \theta_0) \]
+                <p>El <b>vector de posición</b> \(\vec{r}(t)\) se construye usando los vectores unitarios \(\hat{i}\) (para la dirección \(x\)) y \(\hat{j}\) (para la dirección \(y\)):</p>
+                \[ \vec{r}(t) = x(t) \hat{i} + y(t) \hat{j} \]
+                <p>Al sustituir las expresiones para \(x(t)\) e \(y(t)\), obtenemos el vector de posición para el Movimiento Circular Uniforme:</p>
+                \[ \boxed{\vec{r}(t) = (R \cos(\omega t + \theta_0)) \hat{i} + (R \sin(\omega t + \theta_0)) \hat{j}} \]
+                <p>Esta ecuación nos permite conocer la ubicación exacta de un objeto en MCU en cualquier instante de tiempo, a partir de su radio, velocidad angular constante y posición angular inicial.</p>
+            </section>
         </article>
     </body>
 </html>
