Refactor: centralizar marcadores y utilidades SVG; añadir desiredScale
Añade ensureSharedMarkerDefs() y writeValue() en SVGDrawing.js.
Actualiza vectorsPage.js y KinematicsPage.js para usar la definición compartida.
Añade parámetro desiredScale (default 16) al constructor de CartesianPlane.

--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -419,14 +419,15 @@
                 <p>Para describir la posición de un móvil en una trayectoria circular, el sistema de <b>coordenadas polares</b> \((r, \theta)\) es el más natural y conveniente.</p>
                 <ul>
                     <li><b>El Radio (\(r\)):</b> Para una trayectoria circular con su centro en el origen, el radio \(r\) es simplemente el radio constante de la circunferencia, que denotamos como \(R\). Así, la primera coordenada polar es \(r=R\).</li>
-                    <li><b>El Ángulo (\(\theta\)):</b> La segunda coordenada polar es el ángulo \(\theta\), que representa la posición angular del móvil respecto a un eje de referencia (usualmente el eje \(x\) positivo). Este ángulo se mide en <b>radianes</b>.
-                        <p><b>Definición de Radián:</b> Un radián es la unidad de medida de un ángulo que subtiende un arco de longitud igual al radio de un círculo. Si el arco de una circunferencia mide \(s\) y el radio de la circunferencia es \(R\), entonces el ángulo \(\theta\) (en radianes) subtendido por ese arco es:</p>
-                        \[ \theta = \frac{s}{R} \]
-                        <p>De esta definición, podemos deducir una relación fundamental: la longitud de un arco (\(s\)) en una circunferencia es igual al radio (\(R\)) multiplicado por el ángulo (\(\theta\)) que subtiende ese arco (medido en radianes). Para un cambio infinitesimal en la posición angular \(d\theta\), la longitud del arco infinitesimal \(ds\) es:</p>
-                        \[ ds = R d\theta \]
-                        <p>Esta relación conecta la distancia recorrida a lo largo de la trayectoria (una cantidad lineal) con el cambio en la posición angular (una cantidad angular).</p>
-                    </li>
+                    <li><b>El Ángulo (\(\theta\)):</b> La segunda coordenada polar es el ángulo \(\theta\), que representa la posición angular del móvil respecto a un eje de referencia (usualmente el eje \(x\) positivo). Este ángulo se mide en <b>radianes</b>.</li>
                 </ul>
+                <p><b>Definición de Radián:</b> Un radián es la unidad de medida de un ángulo que subtiende un arco de longitud igual al radio de un círculo. Si el arco de una circunferencia mide \(s\) y el radio de la circunferencia es \(R\), entonces el ángulo \(\theta\) (en radianes) subtendido por ese arco es:</p>
+                \[ \theta = \frac{s}{R} \]
+                <p>De esta definición, podemos deducir una relación fundamental: la longitud de un arco (\(s\)) en una circunferencia es igual al radio (\(R\)) multiplicado por el ángulo (\(\theta\)) que subtiende ese arco (medido en radianes). Para un cambio infinitesimal en la posición angular \(d\theta\), la longitud del arco infinitesimal \(ds\) es:</p>
+                \[ ds = R d\theta \]
+                <p>Esta relación conecta la distancia recorrida a lo largo de la trayectoria (una cantidad lineal) con el cambio en la posición angular (una cantidad angular).</p>
+                    
+                
                 <h4>La Velocidad Angular (\(\omega\)) como Constante Fundamental</h4>
                 <p>A partir de la aceleración tangencial nula (\(a_t=0\)), confirmamos que la <b>rapidez lineal (\(v = ds/dt\)) es constante</b>. Utilizando la relación \(ds = R d\theta\), podemos expresar la rapidez lineal como:</p>
                 \[ v = \frac{ds}{dt} = \frac{R d\theta}{dt} = R \frac{d\theta}{dt} \]
