--- a/vectors_es.html
+++ b/vectors_es.html
@@ -372,7 +372,7 @@
                                 &#x03B8; <!-- This is the unicode for lowercase theta -->
                         </text>
                     </svg> 
-                    <figcaption><b>Figure 1.7</b> \(\Vert\vec v \times \vec w\Vert\) como area del paralelogramo.</figcaption>
+                    <figcaption><b>Figura 1.7</b> \(\Vert\vec v \times \vec w\Vert\) como area del paralelogramo.</figcaption>
                 </figure>
                 <p>
                     Según sus componentes, si \(\vec v = (x_1, y_1, z_1)\) y \(\vec w = (x_2, y_2, z_2)\),  el producto vectorial `vecv xx vecw` es un vector definido como:
